envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001

static_resources:
  listeners:
    - name: envoy-listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
          - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                access_log:
                - name: envoy.access_loggers.stdout
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: upstream }
                http_filters:
                  - name: envoy.filters.http.jwt_authn
                    typed_config: 
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        auth_keycloak:
                          issuer: http://localhost:8080/realms/myBasyxServer
                          audiences:
                          - myBasyxClient
                          payload_in_metadata: jwt_payload
                          forward_payload_header: x-jwt-payload
                          remote_jwks:
                            http_uri:
                              uri: http://localhost:8080/realms/myBasyxServer/protocol/openid-connect/certs
                              cluster: keycloak
                              timeout: 25s
                            cache_duration:
                              seconds: 300
                          forward: true
                      rules:
                      - match: {prefix: /}
                        requires: {provider_name: auth_keycloak}
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      transport_api_version: V3
                      failure_mode_allow: false
                      with_request_body:
                        max_request_bytes: 1024
                        pack_as_bytes: true
                        allow_partial_message: true
                      grpc_service:
                        envoy_grpc:
                          cluster_name: opa-envoy
                        timeout: 25s
                      status_on_error:
                        code: ServiceUnavailable
                  - name: envoy.filters.http.router
                    typed_config: 
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
 
  clusters:
    - name: keycloak
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: keycloak
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: keycloak
                  port_value: 8080 

    - name: opa-envoy
      connect_timeout: 1.25s
      type: STRICT_DNS
      lb_policy: round_robin
      http2_protocol_options: {}
      load_assignment:
        cluster_name: opa-envoy
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: opa-envoy
                  port_value: 9191

    - name: upstream
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: upstream
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: basyxserver
                  port_value: 80
